--- a/k8s-specifications/result-deployment.yaml
+++ b/k8s-specifications/result-deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: result
   name: result
+  namespace: example-voting
 spec:
   replicas: 1
   selector:
@@ -15,8 +16,8 @@ spec:
         app: result
     spec:
       containers:
-      - image: dockersamples/examplevotingapp_result
+      - image: quay.io/rabraham/node-js:v1.2
         name: result
         ports:
-        - containerPort: 80
+        - containerPort: 8080
           name: result
