--- a/k8s-specifications/vote-service.yaml
+++ b/k8s-specifications/vote-service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: votesvc
+  namespace: example-voting
   labels:
     app: vote
-  name: vote
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-  - name: "vote-service"
-    port: 5000
-    targetPort: 80
-    nodePort: 31000
+    - port: 31000
+      name: http-port
+      protocol: TCP
+      targetPort: 5000
   selector:
     app: vote
-  
